log
vi., 13 de may. de 2022 12:45:11: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  0|0
a5accb9
vi., 13 de may. de 2022 12:47:15: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1daa92c
vi., 13 de may. de 2022 12:47:58: 
 sudoku.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
c30693c
vi., 13 de may. de 2022 12:50:34: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
2f38396
vi., 13 de may. de 2022 12:54:07: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
967983f
vi., 13 de may. de 2022 12:56:22: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
08679c1
vi., 13 de may. de 2022 16:18:12: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1c06a90
vi., 13 de may. de 2022 16:20:46: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8350324
do., 15 de may. de 2022 19:42:06: 
 sudoku.c | 46 +++++++++++++---------------------------------
 1 file changed, 13 insertions(+), 33 deletions(-)
 tests:  2|4
total_score: 15/70
cbb7da6
do., 15 de may. de 2022 21:41:43: 
 sudoku.c | 62 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 60 insertions(+), 2 deletions(-)
test.c: In function 'test_isvalid':
test.c:112:9: error: too few arguments to function 'is_valid'
     if(!is_valid(initial)){
         ^~~~~~~~
In file included from test.c:5:0:
sudoku.c:46:5: note: declared here
 int is_valid(Node* n,int filas,int comlumnas){
     ^~~~~~~~
test.c:120:8: error: too few arguments to function 'is_valid'
     if(is_valid(initial)){
        ^~~~~~~~
In file included from test.c:5:0:
sudoku.c:46:5: note: declared here
 int is_valid(Node* n,int filas,int comlumnas){
     ^~~~~~~~
test.c:131:8: error: too few arguments to function 'is_valid'
     if(is_valid(initial)){
        ^~~~~~~~
In file included from test.c:5:0:
sudoku.c:46:5: note: declared here
 int is_valid(Node* n,int filas,int comlumnas){
     ^~~~~~~~
test.c:141:8: error: too few arguments to function 'is_valid'
     if(is_valid(initial)){
        ^~~~~~~~
In file included from test.c:5:0:
sudoku.c:46:5: note: declared here
 int is_valid(Node* n,int filas,int comlumnas){
     ^~~~~~~~
test.c: In function 'test_dfs':
test.c:213:9: error: too few arguments to function 'is_valid'
     if(!is_valid(final)){
         ^~~~~~~~
In file included from test.c:5:0:
sudoku.c:46:5: note: declared here
 int is_valid(Node* n,int filas,int comlumnas){
     ^~~~~~~~
Compilation failed
260485b
do., 15 de may. de 2022 22:31:23: 
 sudoku.c | 97 +++++++++++++++++++++++++++++++++++++---------------------------
 1 file changed, 56 insertions(+), 41 deletions(-)
 tests:  0|0
6d44500
do., 15 de may. de 2022 22:34:56: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
938d063
do., 15 de may. de 2022 22:38:56: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
4582488
do., 15 de may. de 2022 22:40:00: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
c59bee2
do., 15 de may. de 2022 22:41:49: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
8398053
do., 15 de may. de 2022 22:44:06: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
e3398cc
do., 15 de may. de 2022 23:16:13: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
877a106
do., 15 de may. de 2022 23:20:20: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
45f3a32
do., 15 de may. de 2022 23:34:11: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
1074f15
do., 15 de may. de 2022 23:36:12: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
a6e0640
lu., 16 de may. de 2022  0:13:49: 
 sudoku.c | 45 ++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 40 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
ef758ff
lu., 16 de may. de 2022  0:15:04: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
8e864b2
lu., 16 de may. de 2022  0:24:47: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0e9b84e
lu., 16 de may. de 2022  0:26:01: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
c84e5c5
lu., 16 de may. de 2022  0:27:29: 
 sudoku.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
1642539
lu., 16 de may. de 2022  0:27:58: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
c99ac23
